--- a/day7/AoC-7.ipynb
+++ b/day7/AoC-7.ipynb
@@ -18,12 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "d = pd.read_csv('2.txt', header = None) #read file\n",
-    "\n",
     "p = list(d.iloc[0])"
    ]
   },
@@ -44,9 +43,7 @@
     "xt = []\n",
     "for x in range(max(p)+1):\n",
     "    xt.append(sum([abs(i-x) for i in p]))\n",
-    "\n",
-    "print(min(xt))\n",
-    "    "
+    "print(min(xt))   "
    ]
   },
   {
@@ -63,13 +60,12 @@
    "outputs": [],
    "source": [
     "d = pd.read_csv('2.txt', header = None) #read file\n",
-    "\n",
     "p = list(d.iloc[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -83,9 +79,8 @@
    "source": [
     "xt = []\n",
     "for x in range(max(p)+1):\n",
-    "    xt.append(sum([abs(i-x)*(abs(i-x)+1)/2 for i in p]))\n",
-    "\n",
-    "print(int(min(xt)))"
+    "    xt.append(sum([abs(i-x)*(abs(i-x)+1)//2 for i in p]))\n",
+    "print(min(xt))"
    ]
   }
  ],
