--- a/day13/AoC-13.ipynb
+++ b/day13/AoC-13.ipynb
@@ -131,19 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#  # ####   ## #  #   ## ###   ##    ## \n",
-      "#  # #       # #  #    # #  # #  #    # \n",
-      "#### ###     # ####    # #  # #       # \n",
-      "#  # #       # #  #    # ###  #       # \n",
-      "#  # #    #  # #  # #  # # #  #  # #  # \n",
-      "#  # ####  ##  #  #  ##  #  #  ##   ##  \n"
+      "█  █ ████   ██ █  █   ██ ███   ██    ██ \n",
+      "█  █ █       █ █  █    █ █  █ █  █    █ \n",
+      "████ ███     █ ████    █ █  █ █       █ \n",
+      "█  █ █       █ █  █    █ ███  █       █ \n",
+      "█  █ █    █  █ █  █ █  █ █ █  █  █ █  █ \n",
+      "█  █ ████  ██  █  █  ██  █  █  ██   ██  \n"
      ]
     }
    ],
@@ -151,11 +151,18 @@
     "for l in matrix:\n",
     "    for c in l:\n",
     "        if int(c) == 0:\n",
-    "            print('#',end='')\n",
+    "            print('█',end='')\n",
     "        else:\n",
     "            print(' ',end='')\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
